--- a/src/style/Assets.css
+++ b/src/style/Assets.css
@@ -5,7 +5,6 @@
 .solid-button {
     border-radius: 50px;
     width: fit-content;
-    margin: 1em;
     padding: .8em 3em;
     outline: none;
     border: none;
@@ -13,12 +12,12 @@
     color: #fff;
     font-family: 'Poppins', sans-serif;
     font-size: .9em;
+    margin: 1rem;
   }
 
   .outlined-button {
     border-radius: 50px;
     width: fit-content;
-    margin: 1em;
     padding: .8em 3em;
     outline: none;
     border: 2px solid var(--main-color);
@@ -26,6 +25,7 @@
     color: var(--main-color);
     font-family: 'Poppins', sans-serif;
     font-size: .9em;
+    margin: 1rem;
   }
 
 /* Main App Nav Bar */
@@ -56,6 +56,6 @@
   }
 
   .logo-img {
-    padding: .5rem;
+    padding: .8rem;
     width: 3rem;
   }
