--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -9,7 +9,7 @@
 
 /* Public Nav Bar */
 .landing-nav {
-    padding: .5rem;
+    padding: .5rem .5rem 1rem .5rem;
     box-sizing: border-box;
     display: flex;
     align-items: center;
@@ -31,30 +31,49 @@
 color: var(--body-text-color);
 }
 
-.landing-nav-button {
-    margin: 0 0 0 0.5rem;
-    padding: .7em 1.5em;
+.landing-nav-button-solid {
+    border-radius: 50px;
+    width: fit-content;
+    padding: .6em 2em;
+    outline: none;
+    border: none;
+    background-color: var(--main-color);
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: .9em;
+}
+
+.landing-nav-button-outlined {
+    border-radius: 50px;
+    width: fit-content;
+    padding: .6em 2em;
+    outline: none;
+    border: 2px solid var(--main-color);
+    background-color: transparent;
+    color: var(--main-color);
+    font-family: 'Poppins', sans-serif;
+    font-size: .9em;
+    margin: .5rem;
 }
 
 /* Hero Section */
 .hero-section {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    padding: .5rem;
-    box-sizing: border-box;
-    margin: 0 5rem;
 }
 
 .hero-heading {
     font-size: 2rem;
     font-weight: bold;
+    padding-bottom: 1rem;
 }
 
 .hero-body {
-    width: 25rem;
+    width: 35rem;
 }
 
 .hero-image {
-    width: 40rem;
+    width: 30rem;
 }
